2007-12-10  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:

	Add function to get the details about the currently selected item.

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:

	- Keep the proxy for AVTransport service in the renderer combo.
	- Add function to retreive the currently selected renderer and it's
	  AVTransport service and protocolinfo.
	- Add stub for querying the state of the AVTransport of the currently
	  selected renderer.

	* src/av-cp/renderer-controls.c:

	Implement basic rendering controls: Setting the URI, Play, Pause and
	Stop.

2007-12-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* data/gupnp-av-cp.glade:
	* src/av-cp/Makefile.am:
	* src/av-cp/renderer-controls.c:

	Basic skeleton for renderer controls.

2007-11-26  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/playlist-treeview.c:

	- Minor indentation changes.
	- Keep the resource ProtcolInfo/URI pairs of each item in treemodel.

2007-11-19  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* AUTHORS:

	Add Vinicius Depizzol to AUTHORS file.

	* data/gupnp-av-cp.glade:

	Give credit to the artists.

2007-11-18  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
	Vinicius Depizzol <vdepizzol@gmail.com>

	* data/pixmaps/Makefile.am:
	* data/pixmaps/media-renderer.png:
	* src/common/icons.c:
	* src/common/icons.h:

	Add cool new icon for MediaRenderer.

	* src/av-cp/renderer-combo.c:

	Use newly added MediaRenderer icon to represent MediaRenderers which
	don't provide an icon.
	
2007-11-09  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/renderer-combo.c:

	- Split add_media_renderer().
	- Keep the renderer protocol info in the combo treemodel.

2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/universal-cp/event-treeview.c:

	Fix a potential leak.

2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* configure.ac:
	* src/Makefile.am:
